Refactored code to clean up and create better consistency Published build 131
